--- a/src/index.ejs
+++ b/src/index.ejs
@@ -9,23 +9,35 @@
         require('module').globalPaths.push('<%= htmlWebpackPlugin.options.nodeModules.replace(/\\/g, '\\\\') %>')
       </script>
     <% } %>
+    <script>
+      const params = new URLSearchParams(document.location.search.substring(1))
+      const theme = params.get('theme') || ''
+      document.documentElement.className += ` theme-${theme}`
+    </script>
   </head>
   <body>
     <div id="app">
       <div class="title-bar"></div>
       <section class="el-container" id="container">
-        <aside class="el-aside aside" style="width: 78px;">
+        <aside
+          class="el-aside aside hidden-sm-and-down"
+          style="width: 78px;"
+        >
         </aside>
-        <aside class="el-aside subnav" style="width: 200px;">
-        </aside>
-        <section class="el-container main">
+        <section class="el-container content panel">
+          <aside class="el-aside subnav hidden-xs-only" style="width: 200px;">
+          </aside>
+          <section class="el-container content panel">
+          </section>
         </section>
       </section>
     </div>
     <!-- Set `__static` path to static files in production -->
     <% if (!process.browser) { %>
       <script>
-        if (process.env.NODE_ENV !== 'development') window.__static = require('path').join(__dirname, '/static').replace(/\\/g, '\\\\')
+        if (process.env.NODE_ENV !== 'development') {
+          window.__static = require('path').join(__dirname, '/static').replace(/\\/g, '\\\\')
+        }
       </script>
     <% } %>
 
